--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -28,6 +28,7 @@
     color:$color-default;
     line-height:1.2em;
     height:100%;
-    width:100%;
+    width:98%;
     display:table;
+	margin:0 auto;
 }
