--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -1,16 +1,12 @@
 //Body
 
-/*[class*='columna-'] {
-	background:red;
-	border:1px solid #FFF;
-}*/
-
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic);
 
 html{
 	height:100%;
 }
 body{
+	background:#020202;
 	min-height:100%;
 }
 a{
