--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $color-header-folder:#999;
 $color-folder:#4682B0;
 $color-sh:#0F0;
 $color-ln:#00F6FF;
-$color-host:#FFF;
+$color-host:green;
 $color-peso:#CD00CD;
 $fuente-bold:bold;
 $color-bienvenida:#32B38C;
