se vuelve al color original

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-fondo:#020202;
 $color-default:#999;
 $color-header-folder:#999;
 $color-folder:#4682B0;
-$color-sh:blue;
+$color-sh:#0F0;
 $color-ln:#00F6FF;
 $color-host:#FFF;
 $color-peso:#CD00CD;
